--- a/css/overall.css
+++ b/css/overall.css
@@ -12,18 +12,40 @@ body {
         opacity: 1 ;
     }
 }
+@keyframes entranceimage {
+    from {
+        opacity: 0;
+        margin-top: 100;
+    }
+    to {
+        opacity: 1;
+        margin-top: 0;
+    }
+}
 img {
     display: block ;
     border: 0.5rem solid #EEEEEE ;
     margin: 0 auto ;
     max-width: 50% ;
     height: auto ;
-    animation-duration: 7s;
-    animation-name: fadein;
+    animation-duration: 1.4s;
+    animation-name: entranceimage;
+    animation-timing-function:cubic-bezier(0.0,0.0,0.8,1.0);
 }
+
 p {
     color: #FFFFFF ;
+    opacity: 0;
+    animation-name:fadein ;
+    animation-delay: 1.5s ;
+    animation-duration: 1.4s;
+    animation-fill-mode: forwards;
 }
 h1 {
     color: #DDAAAA ;
+    opacity: 0;
+    animation-name:fadein ;
+    animation-delay: 1.5s ;
+    animation-duration: 1.4s;
+    animation-fill-mode: forwards;
 }
